benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_ModExp_ModExpPow2_Zeroes_iter3_error.log
=== Verification Error - Iteration 3 ===
File: benchmarks/verus/bignum/files/bignum_ModExp_ModExpPow2_Zeroes.rs
Time: 2025-09-15 10:51:58

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:32:18
   |
32 |     let mut i = (s.len() as int) - 1;
   |                  ^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:55:18
   |
55 |     let mut i = (exp_bits.len() as int) - 1;
   |                  ^^^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:27:13
   |
27 |     ensures result == Str2Int(s@), 0 <= result
   |             ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:27:41
   |
27 |     ensures result == Str2Int(s@), 0 <= result
   |                                         ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:50:13
   |
50 |     ensures result == Exp_int(base as nat, Str2Int(exp_bits@)) % (modulus as nat), result >= 0
   |             ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:50:84
   |
50 |     ensures result == Exp_int(base as nat, Str2Int(exp_bits@)) % (modulus as nat), result >= 0
   |                                                                                    ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:73:28
   |
73 |     ensures ValidBitString(result@), Str2Int(result@) == n
   |                            ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:73:46
   |
73 |     ensures ValidBitString(result@), Str2Int(result@) == n
   |                                              ^^^^^^ not found in this scope

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:32:18
   |
32 |     let mut i = (s.len() as int) - 1;
   |                  ^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:55:18
   |
55 |     let mut i = (exp_bits.len() as int) - 1;
   |                  ^^^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:27:13
   |
27 |     ensures result == Str2Int(s@), 0 <= result
   |             ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:27:41
   |
27 |     ensures result == Str2Int(s@), 0 <= result
   |                                         ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:50:13
   |
50 |     ensures result == Exp_int(base as nat, Str2Int(exp_bits@)) % (modulus as nat), result >= 0
   |             ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:50:84
   |
50 |     ensures result == Exp_int(base as nat, Str2Int(exp_bits@)) % (modulus as nat), result >= 0
   |                                                                                    ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:73:28
   |
73 |     ensures ValidBitString(result@), Str2Int(result@) == n
   |                            ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:73:46
   |
73 |     ensures ValidBitString(result@), Str2Int(result@) == n
   |                                              ^^^^^^ not found in this scope

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0425`.
